# rust-flwi-spacetraders-leaderboard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  justfile
.sqlx/: query-05b0501003994121d82207094b6e76a29b3e9b98e3771d3f2661bdcbb0f33ea7.json  query-06afcf84f76dd9ea14cfd7f771f79a8bfa19f9ee2ba060fe9fd4117e3171e4b1.json  query-070371d1065ed78291b0b23ad22ee8c13d36ee366647e910ca666acb16fb589a.json  query-0d5d254c58906de6b090d8727e33305ab3d1c61e16f98da2bc7fec81be410e22.json  query-1209c54c96f1e983fa9989caa1e3391bf7e2e6a1ad22e7a12c74d0e4798547bd.json  query-1c9ca92c1fa25d73691553335da99ae4b440c08731a67ab2bc35159a42bae5c1.json  query-26e7b75b45114eded55f062d386ccfc80e8d81e0bb1486c9fadf231491302cc3.json  query-304ece1cf4dd25268596fae7d4571b91aa3a92163bcb0c755ed4d30c53d80e93.json  query-35572e66f3d36076dba0526bdd3f529c71517994d8489c89e70c03fdca10ae45.json  query-366279a4947a21d2baa3c41f30cd6589c74456ec7402dc916de3524f37105ad1.json  query-410295bcd454aa17504d053bbd9edb549841d9394a87cb2fa4999178c37c1c57.json  query-48cfe0c74d664d9b3c1e5fd029eae530eb4cf966ce5ae64ee9a83c9425019bb2.json  query-5048a190cd772daad73ff883a787060071bad97074a39a9dd446ca914756dc58.json  query-57800a8b5eae7418e371a2d46253f30288324b91fe2c097b228c13caf3b01642.json  query-6f3d6199083f3c12aa993afbb7f81e9511e25e267396c8eafa2c105d4e44f536.json  query-7198d014e16d42b6c956b9ded95977aee235eb390dbbdf4ea375e0fcf3df2953.json  query-7b7eb84735a8c08771aab0656e377b934cd581700fc08b08da45dc4ffe0004f6.json  query-7c5630a2bfa9cdf84be35cb825d2a96f536403b4db4f9b6d0fe52a1c20e586f4.json  query-84fd6ccf00bf7d5f871fd89618628a96d7f6d5de9693cde167673b42d1ee2379.json  query-8cf70d31463d5d2a6907cd8a0114466729bfdecf6ea9a769c02204ae903e96a3.json  query-9173a17dec658b404d39e228df2cc6b31ed28f7668458b9d17eb9f499a71cbae.json  query-92ec310ad999f108919c554928311570e971876955e35d1887abffd17e85f14e.json  query-9b5f0d2c7fa54aa0f3f9b7acb720ea4d3e55475133eae825bea8b92d7c467952.json  query-a378e5ecf6fe6c482548e9ba8d5e1b1f93b344f3d8853e4fca084f1145c5ab3c.json  query-b1d8701d0a261e06da5ae1c69d6b1a76ce4878f3e537776d3804e5835fde5aec.json  query-bd7d61d71a31c16bfad38c18edf1e1623b96123330b4fe4d291f76a6613777b1.json  query-c4e25a2cdf26914e38900987ef472641db93f553668b01fbb4991a5ee1df7735.json  query-d3ac933a5e96584fbb27d43695f10490e65eb974362c6179606e67c2f73535fa.json  query-d3ef330a6a70e283dc56bb4d64905068401e8f86eee86dea6ee3bb2139d3c99f.json  query-de406a3041ee84f1f289602f45f046e756df78bde032701c909601350c583cd8.json  query-dec39b441d0f2dd16c24230fcdc756d7d83e541eeb2212d65119d6d564c8c743.json  (+4 more)
flwi-spacetraders-leaderboard/: .dockerignore  index.html  (+7 more)
(+80 files in other folders)
