[package]
name = "flwi-spacetraders-leaderboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
reqwest-middleware = "0.2.5"
governor = "0.6.3"
async-trait = "0.1.78"
task-local-extensions = "0.1.0"
futures = "0.3.30"
itertools = "0.12.1"
