[package]
name = "flwi-spacetraders-leaderboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
reqwest-middleware = "0.3.1"
governor = "0.6.3"
async-trait = "0.1.78"
task-local-extensions = "0.1.0"
futures = "0.3.30"
itertools = "0.12.1"
chrono = { version = "0.4.35", features = ["serde"] }
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate"] }
tokio-cron-scheduler = "0.10.0"
axum = "0.7.5"
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.0.1", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
envy = "0.4.2"
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
serde_json = "1.0.116"
clap = { version = "4.5.4", features = ["derive", "env"] }
reqwest-retry = "0.5.0"
